--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
   text-align: center;
+  transition: .5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  background-color: #f4f4f4;
+  box-sizing: border-box;
+  text-rendering: optimizeLegibility;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+:root {
+  --primary: #ddd;
+  --dark: #333;
+  --light: #fff;
+  ---shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  text-decoration: none;
+  outline: none;
+  border: none;
+  background-color: var(--dark);
+  color: var(--light);
+  padding: 8px 20px;
+  text-transform: uppercase;
+  border-radius: 40px;
+  margin-top: 1em;
+  letter-spacing: 1px;
+  box-shadow: var(---shadow);
+  transition: background-color 2s ease, color 1s ease;
+}
+button:hover {
+  background-color: var(--light);
+  color: var(--dark);
 }
